[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Menus/FadeIn.tscn" type="PackedScene" id=1]
[ext_resource path="res://Objects/UI/TextBoxes.tscn" type="PackedScene" id=2]
[ext_resource path="res://Objects/UI/CursorArea.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objects/Template Objects/Character.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/CharacterSprites/Man.PNG" type="Texture" id=5]
[ext_resource path="res://Scenes/Places/TemplateScene.gd" type="Script" id=6]
[ext_resource path="res://Assets/Music/Temporary Main Music.mp3" type="AudioStream" id=8]

[node name="Node2D" type="Node2D"]
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 749.881, 501.881 )
scale = Vector2( 1.46586, 1.67294 )

[node name="TextBoxes" parent="." instance=ExtResource( 2 )]
margin_left = -1.37842
margin_top = -0.945946
margin_right = -1.37842
margin_bottom = -0.945946

[node name="CharacterArea" parent="." instance=ExtResource( 4 )]
position = Vector2( 975.15, 665.956 )
scale = Vector2( 0.75, 0.75 )
character_name = "TemplateDoug"

[node name="Sprite" type="Sprite" parent="CharacterArea"]
position = Vector2( 2.97021, 5.34546 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )

[node name="CursorArea" parent="." instance=ExtResource( 3 )]

[node name="GameMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -5.0
pitch_scale = 1.3

[node name="FadeIn" parent="." instance=ExtResource( 1 )]
margin_right = 1500.0
margin_bottom = 1000.0

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 10.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
